kubernetes/workloads/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      serviceAccountName: pihole
      containers:
        - name: pihole
          image: 'pihole/pihole:2024.07.0'
          ports:
            - containerPort: 80
              protocol: TCP
              name: web
            - containerPort: 53
              protocol: UDP
              name: dns-udp
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 67
              protocol: UDP
              name: dhcp
          volumeMounts:
            - mountPath: "/etc/pihole"
              name: etc
            - mountPath: "/etc/dnsmasq.d"
              name: dnsmasqd
      volumes:
        - name: etc
          persistentVolumeClaim:
            claimName: pihole-etc
        - name: dnsmasqd
          persistentVolumeClaim:
            claimName: pihole-dnsmasqd
