kubernetes/workloads/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  selector:
    app: pihole
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
      name: web
    - protocol: UDP
      port: 53
      targetPort: dns-udp
      name: dns-udp
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
