kubernetes/workloads/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.pynenborg.com
      http:
        paths:
          - backend:
              service:
                name: pihole
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pihole.pynenborg.com
      secretName: pihole-tls
